syntax = "proto3";

package berty.account.v1;

import "gogoproto/gogo.proto";
import "protocoltypes.proto";
import "errcode.proto";

option go_package = "berty.tech/berty/go/pkg/bertyaccount";

service AccountService {
  /// Account

  // OpenAccount starts a Berty node.
  rpc OpenAccount (OpenAccount.Request) returns (OpenAccount.Reply);

  // OpenAccountWithProgress is similar to OpenAccount, but also streams the progress.
  rpc OpenAccountWithProgress (OpenAccountWithProgress.Request) returns (stream OpenAccountWithProgress.Reply);

  // CloseAccount closes the currently opened account.
  rpc CloseAccount (CloseAccount.Request) returns (CloseAccount.Reply);

  // CloseAccountWithProgress is similar to CloseAccount, but also streams the progress.
  rpc CloseAccountWithProgress (CloseAccountWithProgress.Request) returns (stream CloseAccountWithProgress.Reply);

  // ListAccounts retrieves a list of local accounts.
  rpc ListAccounts (ListAccounts.Request) returns (ListAccounts.Reply);

  // DeleteAccount deletes an account.
  rpc DeleteAccount (DeleteAccount.Request) returns (DeleteAccount.Reply);

  // ImportAccount imports existing data.
  rpc ImportAccount (ImportAccount.Request) returns (ImportAccount.Reply);

  // CreateAccount creates a new account.
  rpc CreateAccount (CreateAccount.Request) returns (CreateAccount.Reply);

  // PushReceive
  rpc PushReceive (PushReceive.Request) returns (PushReceive.Reply);

  // PushPlatformTokenRegister
  rpc PushPlatformTokenRegister (PushPlatformTokenRegister.Request) returns (PushPlatformTokenRegister.Reply);

  /// GRPC Adapter
  // GetGRPCListenerAddrs return current listeners addrs available on this bridge.
  rpc GetGRPCListenerAddrs (GetGRPCListenerAddrs.Request) returns (GetGRPCListenerAddrs.Reply);
}

message OpenAccount {
  message Request {
    repeated string args = 1;
    string account_id = 2 [(gogoproto.customname) = "AccountID"];
    string logger_filters = 3;
  }
  message Reply {
  }
}

message OpenAccountWithProgress {
  message Request {
    repeated string args = 1;
    string account_id = 2 [(gogoproto.customname) = "AccountID"];
    string logger_filters = 3;
  }
  message Reply {
    berty.protocol.v1.Progress progress = 1;
  }
}

message CloseAccount {
  message Request {}
  message Reply {
  }
}

message CloseAccountWithProgress {
  message Request {}
  message Reply {
    berty.protocol.v1.Progress progress = 1;
  }
}

message AccountMetadata {
  string account_id = 1 [(gogoproto.customname) = "AccountID"];
  string name = 2;
  int64 last_opened = 3;
}

message ListAccounts {
  message Request {}
  message Reply {
    repeated AccountMetadata accounts = 1;
  }
}

message DeleteAccount {
  message Request {
    string account_id = 1 [(gogoproto.customname) = "AccountID"];
  }
  message Reply {
  }
}

message ImportAccount {
  message Request {
    string account_id = 1 [(gogoproto.customname) = "AccountID"];
    string account_name = 2;
    string backup_path = 3;
    repeated string args = 4;
    string logger_filters = 5;
  }
  message Reply {
    AccountMetadata account_metadata = 1;
  }
}

message CreateAccount {
  message Request {
    string account_id = 1 [(gogoproto.customname) = "AccountID"];
    string account_name = 2;
    repeated string args = 3;
    string logger_filters = 4;
  }
  message Reply {
    AccountMetadata account_metadata = 1;
  }
}

message PushReceive {
  message Request {
    string payload = 1;
    protocol.v1.PushServiceTokenType token_type = 2;
  }
  message Reply {}
}

message PushPlatformTokenRegister {
  message Request {
    protocol.v1.PushServiceReceiver receiver = 1;
  }

  message Reply {}
}

message GetGRPCListenerAddrs {
  message Request {}
  message Reply {
    repeated Entry entries = 1;
    message Entry {
      string proto = 1;
      string maddr = 2;
    }
  }
}
